--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,8 +1,33 @@
 .main {
-    width: 100%;
-}
-
-.songShelf {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #f8f8f8;
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
+    overflow-y: auto; 
+  }
+  
+  .songShelf {
+    display: flex;
     justify-content: center;
-    width: 80%;
-}
+    align-items: center;
+    flex-grow: 1;
+    width: 100%;
+    padding: 2rem;
+    box-sizing: border-box;
+    overflow-y: auto;
+    /* padding-top: 200px; */
+  }
+
+.header {
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: white;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  
