--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
     overflow: hidden;
     background-color: #f8f8f8;
     font-family: Arial, sans-serif;
     min-height: 100vh;
     overflow-y: auto; 
+    position: relative;
+    z-index: 0;
   }
   
   .songShelf {
@@ -16,13 +17,16 @@
     align-items: center;
     flex-grow: 1;
     width: 100%;
-    padding: 2rem;
     box-sizing: border-box;
     overflow-y: auto;
-    /* padding-top: 200px; */
+    padding: 4rem 2rem 2rem;
+    position: relative;
+    z-index: 0;
+    overflow: visible;
   }
 
 .header {
+    position: sticky;
     top: 0;
     width: 100%;
     z-index: 1000;
